fix Docker files
